kubernetes/least-privilege-access/001_request-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: fhir-access
  namespace: datamesh
spec:
  selector:
    matchLabels:
      app: fhir-server
  jwtRules:
  - issuer: https://keycloak.idea.lst.tfo.upm.es/realms/IDEA4RC
    jwksUri: https://keycloak.idea.lst.tfo.upm.es/realms/IDEA4RC/protocol/openid-connect/certs
