kubernetes/least-privilege-access/002_auth-policy-medic.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-medic
  namespace: datamesh
spec:
  selector:
    matchLabels:
      app: fhir-server
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["POST"]
    when:
    - key: request.auth.claims[realm_access][roles]
      values: ["Medic"]
