kubernetes/least-privilege-access/003_auth-policy-patient.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: datamesh
spec:
  selector:
    matchLabels:
      app: fhir-server
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.auth.claims[realm_access][roles]
      values: ["Patient"]
